Update styles in auth components

--- a/libs/client-web-app/auth/ui/form-wrapper/src/lib/form-wrapper/form-wrapper.component.html
+++ b/libs/client-web-app/auth/ui/form-wrapper/src/lib/form-wrapper/form-wrapper.component.html
@@ -1,5 +1,5 @@
 <div
-  class="justify-content-center flex flex-column w-full align-items-center h-full"
+  class="justify-content-center flex flex-column w-full align-items-center height-content"
 >
   <div class="flex flex-column align-items-start mb-4 max-w-30rem w-full">
     <h2 class="text-2xl md:text-3xl xl:text-5xl">{{ header }}</h2>
